<resources>
    <string name="app_name">The Movie</string>
    <string name="api_key_movie">176fa03204ca73806a14b489cfc31842</string>
    <string name="api_key_youtube">AIzaSyCRNbzuvvug1H6-IosH4gFp7-HhvH2XpMA</string>
    <string name="netflix">Netflix</string>
    <string name="the_walking_dead">The Walking dead</string>
    <string name="my_list">My List</string>
    <string name="popular_on_netflix">Popular on Netflix</string>
    <string name="categories">Action</string>
    <string name="title_movies">John Wick 3 - PARABELLUM</string>
    <string name="categories_movies">CRIME, ACTION, THRILLER</string>
    <string name="id">ID</string>
    <string name="number_year">2019</string>
    <string name="release_date">Release Date</string>
    <string name="date">2000 – 19 - 08</string>
    <string name="length">Length</string>
    <string name="time_of_movies">2h 11min</string>
    <string name="about_movies">Lorem ipsum dolor sit amet consectetur adipisicing elit. At similique quis illum
    repudiandae enim odit aliquid? Dicta unde expedita consequatur corporis impedit, adipisci officia, aliquid
    evenniet tenetur totam, molestiate aut!</string>
    <string name="keyword">Keyword</string>
    <string name="metascore">Metascore</string>
    <string name="point_metascore">9.4</string>
    <string name="point_evaluate">8.1</string>
    <string name="point_total_evaluate">/10</string>
    <string name="vote_count">Vote Count</string>
    <string name="number_vote_count">89</string>
    <string name="search">Search</string>
    <string name="keyword_search">Movie, Actors, Directors,...</string>
    <string name="recent">Recent</string>
    <string name="see_all">SEE ALL</string>
    <string name="popular">Popular</string>
    <string name="director">Director:</string>
    <string name="name_director">David</string>
    <string name="reviews">Reviews</string>
    <string name="number_reviews">189</string>
    <string name="best_actors">Best Actors</string>
    <string name="more_actors"><u>More Actors</u></string>
    <string name="name_actors">Leonardo DiCaprio</string>
    <string name="you_like">YOU LIKE</string>
    <string name="movies">MOVIES</string>
    <string name="evaluate">Evaluate:</string>
    <string name="name_people">Chris Evans</string>
    <string name="number_of_movies_involved">Number movies:</string>
    <string name="search_movies">Search Movies</string>
    <string name="search_people">Search People</string>
    <string name="overview">Overview</string>
    <string name="vote_average_format">Vote Average: %1$s</string>
    <string name="vote_count_format">Vote Count: %1$d</string>
    <string name="release_date_format">Released Date: %1$s</string>
    <string name="popularity_format">Popularity: %1$s</string>
    <string name="show_name">Show name</string>
    <string name="ok">Ok</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="update_movies">Update Movies</string>
    <string name="name_movies">Name Movies</string>
    <string name="cancel">Cancel</string>
</resources>
