<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="8dp"
    android:gravity="center"
    android:background="@drawable/border_dialog_white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/customDialogMenu_imgClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:src="@drawable/ic_close" />

    <TextView
        android:id="@+id/customDialogMenu_tvTitleMovies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/the_walking_dead"
        android:textColor="@android:color/black"
        android:textSize="18dp" />

    <ImageView
        android:id="@+id/customDialogMenu_imgPosterMovies"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/customDialogMenu_tvVoteAverage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        tool:text="@string/point_evaluate" />

    <TextView
        android:id="@+id/customDialogMenu_tvVoteCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        tool:text="@string/point_evaluate" />

    <TextView
        android:id="@+id/customDialogMenu_tvReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        tool:text="@string/release_date" />

    <TextView
        android:id="@+id/customDialogMenu_tvPopularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        tool:text="@string/length" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/customDialogMenu_tvShowName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/show_name"
            android:textColor="@android:color/holo_blue_light" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/customDialogMenu_tvOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/ok"
            android:textColor="@android:color/holo_red_light" />
    </LinearLayout>

</LinearLayout>