<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color">

    <TextView
        android:id="@+id/customDialogUpdateMovies_tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/update_movies"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/customDialogUpdateMovies_etId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:enabled="false"
        android:hint="@string/id"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customDialogUpdateMovies_tvTitle"/>

    <EditText
        android:id="@+id/customDialogUpdateMovies_etNameMovies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/name_movies"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customDialogUpdateMovies_etId"/>

    <TextView
        android:id="@+id/customDialogUpdateMovies_tvOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_textview_red"
        android:padding="16dp"
        android:text="@string/ok"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customDialogUpdateMovies_etNameMovies" />

    <TextView
        android:id="@+id/customDialogUpdateMovies_tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/border_textview_red"
        android:padding="16dp"
        android:text="@string/cancel"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customDialogUpdateMovies_etNameMovies" />

</androidx.constraintlayout.widget.ConstraintLayout>