<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/fragDetailMovies_imgPosterDetailMovies"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fragDetailMovies_imgBack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_left_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fragDetailMovies_imgFavoriteMovies"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="16dp"
            android:src="@drawable/selector_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fragDetailMovies_imgAddMovies"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_plus_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragDetailMovies_imgPosterDetailMovies" />

        <ImageView
            android:id="@+id/fragDetailMovies_imgPlayMovies"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_play_video"
            app:layout_constraintBottom_toBottomOf="@id/fragDetailMovies_imgPosterDetailMovies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragDetailMovies_imgPosterDetailMovies" />

        <ImageView
            android:id="@+id/fragDetailMovies_imgSearchMovies"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragDetailMovies_imgPosterDetailMovies" />

        <TextView
            android:id="@+id/fragDetailMovies_tvTitleMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/title_movies"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragDetailMovies_imgPlayMovies" />

        <TextView
            android:id="@+id/fragDetailMovies_tvOriginalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories_movies"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragDetailMovies_tvTitleMovies" />

        <RatingBar
            android:id="@+id/fragDetailMovies_rtbEvaluate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/evaluateRatingBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragDetailMovies_tvOriginalTitle" />

        <TextView
            android:id="@+id/fragDetailMovies_tvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/id"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragDetailMovies_rtbEvaluate" />

        <TextView
            android:id="@+id/fragDetailMovies_tvNumberId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/number_year"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragDetailMovies_tvId" />

        <TextView
            android:id="@+id/fragDetailMovies_tvReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/release_date"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragDetailMovies_rtbEvaluate" />

        <TextView
            android:id="@+id/fragDetailMovies_tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragDetailMovies_tvReleaseDate" />

        <TextView
            android:id="@+id/fragDetailMovies_tvLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/length"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragDetailMovies_rtbEvaluate" />

        <TextView
            android:id="@+id/fragDetailMovies_tvTimeOfMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/time_of_movies"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/fragDetailMovies_tvLength"
            app:layout_constraintTop_toBottomOf="@id/fragDetailMovies_tvLength" />

        <TextView
            android:id="@+id/fragDetailMovies_tvPointMetascore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/point_metascore"
            android:textColor="@color/color_metascore"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragDetailMovies_tvNumberId" />

        <TextView
            android:id="@+id/fragDetailMovies_tvMetascore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/metascore"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragDetailMovies_tvPointMetascore"/>

        <ImageView
            android:id="@+id/fragDetailMovies_imgEvaluate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_full"
            app:layout_constraintTop_toBottomOf="@id/fragDetailMovies_tvDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/fragDetailMovies_tvPointEvaluate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point_evaluate"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/fragDetailMovies_tvMetascore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/fragDetailMovies_tvTotalEvaluate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point_total_evaluate"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/fragDetailMovies_tvPointEvaluate"
            app:layout_constraintStart_toEndOf="@id/fragDetailMovies_tvPointEvaluate" />

        <TextView
            android:id="@+id/fragDetailMovies_tvNumberVoteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/number_vote_count"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragDetailMovies_tvTimeOfMovies" />

        <TextView
            android:id="@+id/fragDetailMovies_tvVoteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/vote_count"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragDetailMovies_tvNumberVoteCount" />

        <TextView
            android:id="@+id/fragDetailMovies_tvAboutMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:gravity="center"
            android:text="@string/about_movies"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragDetailMovies_tvDate" />

        <TextView
            android:id="@+id/fragDetailMovies_tvKeyword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/keyword"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragDetailMovies_tvAboutMovies" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragDetailMovies_rcvKeyword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/fragDetailMovies_tvKeyword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>