<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_color"
    android:padding="8dp">

    <ImageView
        android:id="@+id/itemPeople_imgAvatarPeople"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_logo"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/itemPeople_tvNamePeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/name_people"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/itemPeople_imgAvatarPeople"
        app:layout_constraintStart_toEndOf="@id/itemPeople_imgAvatarPeople"
        app:layout_constraintTop_toTopOf="@id/itemPeople_imgAvatarPeople" />

    <TextView
        android:id="@+id/itemPeople_tvNumberOfMoviesInvolved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/number_of_movies_involved"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@id/itemPeople_tvNamePeople"
        app:layout_constraintTop_toBottomOf="@id/itemPeople_tvNamePeople" />

    <TextView
        android:id="@+id/itemPeople_tvNumberMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/number_vote_count"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@id/itemPeople_tvNumberOfMoviesInvolved"
        app:layout_constraintTop_toTopOf="@id/itemPeople_tvNumberOfMoviesInvolved" />

</androidx.constraintlayout.widget.ConstraintLayout>